--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,18 +6,5 @@
 	},
 
     // Use 'initializeCommand' to run commands before the container is created.
-    "initializeCommand": [".devcontainer/initializeCommand"],
-
-    // for git submodules: https://docs.github.com/ja/codespaces/managing-your-codespaces/managing-repository-access-for-your-codespaces
-    "customizations": {
-        "codespaces": {
-            "repositories": {
-                "SonySemiconductorSolutions/sdk-public-test-b": {
-                    "permissions": {
-                        "contents": "read"
-                    }
-                }
-            }
-        }
-    }
+    "initializeCommand": [".devcontainer/initializeCommand"]
 }
